# grop

./: .gitignore  Cargo.toml  README.md  fetch_test_data.sh  flamegraph.sh
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  db.rs  main.rs  query.rs  run.rs  target_file.rs
crates/cli/tests/: db.rs  help.rs  query.rs  run.rs
crates/cli/tests/testlib/: mod.rs
crates/database/: Cargo.toml
crates/database/src/: chunk_ends.rs  chunk_inventory.rs  chunk_list.rs  from_lines.rs  lib.rs
crates/database/src/trigram_map/: inner_layer.rs  leaf_layer.rs  mod.rs
crates/database_queries/: Cargo.toml
crates/database_queries/src/: lib.rs
crates/int/: Cargo.toml
crates/int/src/: lib.rs
crates/int_always_ascending/: Cargo.toml
crates/int_always_ascending/src/: lib.rs
crates/int_variable/: Cargo.toml
crates/int_variable/src/: lib.rs
crates/query_eval/: Cargo.toml
crates/query_eval/src/: and.rs  heap.rs  leaf.rs  lib.rs  match_all.rs  or.rs
crates/trigrams_from_regex/: Cargo.toml
crates/trigrams_from_regex/src/: lib.rs  query.rs
