[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
arbtest = "0.3.2"
arbitrary = "1.4.2"
assert_cmd = "2.1.1"
bytesize = "2.3.1"
clap = "4.5.53"
clap-verbosity-flag = "3.0.4"
directories = "6.0.0"
grep = "0.4.1"
humansize = "2.0.0" # NOCOMMIT use bytesize
memmap2 = "0.9.9"
predicates = "3.1.3"
regex = "1.12.2"
regex-syntax = "0.8.8"
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
yare = "3.0.0"

database.path = "crates/database"
database_queries.path = "crates/database_queries"
int.path = "crates/int"
int_always_ascending.path = "crates/int_always_ascending"
int_variable.path = "crates/int_variable"
query_eval.path = "crates/query_eval"
trigrams_from_regex.path = "crates/trigrams_from_regex"
